fixed overflow contents in ticket and changing background color when scroll down

--- a/kanban/index.css
+++ b/kanban/index.css
@@ -106,6 +106,8 @@ body{
     width: 15rem;
     flex-direction: column;
     background-color: rgba(128, 0, 128, 0.29);
+    /* overflow: auto; */
+    /* overflow-x: ; */
 }
 
 .ticket-status-color{
@@ -120,13 +122,17 @@ body{
     position: relative;
     width: 100%;
     height: 100%;
+    word-wrap: break-word;
+    overflow: auto;
+    background-color: rgba(128, 0, 128, 0.29);
+    /* overflow-wrap: normal; */
 }
 
 .ticket-text{
     font-size: 1rem;
     width: 100%;
     height: 100%;
-    background-color: rgba(128, 0, 128, 0.29);
+    /* max-height: max-content; */
 }
 .lock-icon{
     position: absolute;
@@ -137,11 +143,7 @@ body{
 /* styling new task form */
 
 .new-task-form{
-    /* display: flex; */
-    /* Testing */
     position: absolute;
-    z-index: 1;
-    /* Testing ends */
     display: none;
     background-color: lightgray;
     height: 50vh;
